Assignment 4/.metadata/.plugins/org.eclipse.cdt.ui/Led.c.build.log
19:54:27 **** Incremental Build of configuration Debug for project Led.c ****
make -j12 all 
arm-none-eabi-gcc "../Src/led.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/led.d" -MT"Src/led.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=soft -mthumb -o "Src/led.o"
../Src/led.c: In function 'led_init':
../Src/led.c:13:9: error: 'RCC' undeclared (first use in this function)
   13 |         RCC->AHB1ENR |= BV(3);
      |         ^~~
../Src/led.c:13:9: note: each undeclared identifier is reported only once for each function it appears in
../Src/led.c:13:25: warning: implicit declaration of function 'BV' [-Wimplicit-function-declaration]
   13 |         RCC->AHB1ENR |= BV(3);
      |                         ^~
../Src/led.c:15:9: error: 'GPIOD' undeclared (first use in this function)
   15 |         GPIOD->MODER &= ~(BV(25));
      |         ^~~~~
../Src/led.c: In function 'led_on':
../Src/led.c:28:9: error: 'GPIOD' undeclared (first use in this function)
   28 |         GPIOD->ODR |= BV(12);
      |         ^~~~~
../Src/led.c: In function 'led_off':
../Src/led.c:32:9: error: 'GPIOD' undeclared (first use in this function)
   32 |         GPIOD->ODR &= ~(BV(12));
      |         ^~~~~
make: *** [Src/subdir.mk:34: Src/led.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

19:54:28 Build Failed. 5 errors, 1 warnings. (took 580ms)

